Added security patches for the 1.3.8 version to the Zencart installer.
Removed support for Joomla 1.0 series versions.
Added support for JSON, XML and Perl output to the remote API, enabled with the json=1, xml=1 or perl=1 URL parameters.
Deprecated the feature to write logs via a program, as logging to /var/log/virtualmin is now the default.
Added validation for incorrect SuExec Apache directives.
If a single database backup for a virtual server fails, others will still be backed up.
When editing default scripts in a template, an option to always install the latest version is now available.
Added a bandwidth monitoring option to include relayed email, thanks to Collin from Bisnet.
---- Changes since 3.72 ----
Updated the Plans script installer to 8.0.4, and Movable Type to 4.31.
On Sendmail systems with outgoing address mapping enabled, the generic domains file is now correctly updated.
Script installer versions more recent that those included with the current release of Virtualmin can now be downloaded using the Installer Updates section on the Script Installers page. The new versions will typically be released within hours or days of new script releases.
Added a domain-owner leven restriction to prevent changing of a virtual server's password.
Put back support for installing Joomla 1.0 series versions.
---- Changes since 3.73 ----
Updated the Horde Passwd script installer to h3-3.1.1, PHPCoin to 1.6.4, OpenGoo to 1.5.3, LimeSurvey to 1.85plus-build7561-20090902, TextPattern to 4.2.0, CMS Made Simple to 1.6.4, phpMyFAQ to 2.0.17, TWiki to 4.3.2, Rails to 2.3.4, Radiant to 0.8.1, MoinMoin to 1.8.5, SugarCRM to 5.2.0j, and Plans to 8.0.8.
If Postfix relay domains are stored in a hash, update it instead of adding to relay_domains in /etc/postfix/main.cf.
Additional allowed MySQL client hosts are now included in backups.
Added a warning to the configuration check for systems behind a NAT gateway with an incorrectly configured DNS IP address.