@@ -174,3 +174,4 @@ plan_auto=1
 collect_notemp=0
 hide_alias=0
 avail_htaccess-htpasswd=1
+index_cols=dom,user,owner,users,aliases
