@@ -19,8 +19,8 @@ netmask6=Netmask size for IPv6 addresses,3,Default (64)
 line1.4=User interface settings,11
 display_max=Maximum number of domains to display,3,Unlimited
 name_max=Maximum domain name length to display,0,5
-show_features=Show server features on main page?,1,1-Yes,0-No
-show_quotas=Show disk usage on main page?,1,1-Yes,0-No
+index_cols=Columns to show,2,dom-Domain name,user-Username,owner-Description,emailto-Email address<br>,reseller-Reseller,admins-Extra admins,users-User count,aliases-Alias count<br>,quota-Disk quota,uquota-Quota used
+index_fcols=Feature columns to show,2,web-Website,ssl-SSL website,dns-DNS domain,mail-Email<br>,mysql-MySQL,postgres-PostgreSQL,spam-Spam filtering,virus-Virus filtering<br>,webalizer-Webalizer,webmin-Webmin login
 show_mailsize=Show mailbox size in users list?,1,1-Yes,0-No
 show_sysinfo=Show system information on main page?,1,1-Yes,0-No,2-Only for master admin,3-Only for master and resellers
 template_auto=Allow editing of limits when creating server?,1,0-Yes,1-No
