@@ -1,0 +1,8 @@
+<header>Columns to show</header>
+
+This field lets to control what information is shown about each virtual server
+on the <b>List Virtual Servers</b> page. Columns are always shown in the order
+they are listed here.<p>
+
+<footer>
+
