@@ -1,0 +1,9 @@
+<header>Feature columns to show</header>
+
+This field can be used to include columns showing which features are enabled
+for each virtual server on the <b>List Virtual Servers</b> page. These always
+appear after the column for server details like the domain name, description
+and quotas. <p>
+
+<footer>
+
