@@ -1,3 +1,0 @@
-<header>Show server features on main page?</header>
-If enabled, the features that are configured for the domain will be displayed in the row of data for that domain.  It can lead to rather wide tables, so if screen real estate is at a premium, not displaying all of the information may be preferred.  Clicking on the domain will always show all of the configured options for the server (and allow changing them).
-<footer>
