@@ -1,3 +1,0 @@
-<header>Show disk usage on main page?</header>
-If disk usage quotas are enabled, enabling this will cause the disk usage for each virtual server account to be displayed in the servers list on the front page.
-<footer>
