@@ -7,7 +7,7 @@ index_newuser=&lt;New user&gt;
 index_import=Import Virtual Server
 index_migrate=Migrate Virtual Server
 index_batch=Batch Create Servers
-index_domain=Domain name
+index_dom=Domain name
 index_user=Username
 index_owner=Description
 index_web=Website?
@@ -21,8 +21,12 @@ index_ssl=SSL?
 index_spam=Spam?
 index_virus=Virus?
 index_status=Status?
-index_mail=Users
-index_alias=Aliases
+index_mail=Email?
+index_webmin=Webmin?
+index_users=Users
+index_aliases=Aliases
+index_reseller=Reseller
+index_admins=Admins
 index_none=No virtual servers have been created yet.
 index_none2=You do not have access to any virtual servers.
 index_return=virtual servers list
