@@ -1157,3 +1157,4 @@ Updated the Horde Passwd script installer to h3-3.1.1, PHPCoin to 1.6.4, OpenGoo
 If Postfix relay domains are stored in a hash, update it instead of adding to relay_domains in /etc/postfix/main.cf.
 Additional allowed MySQL client hosts are now included in backups.
 Added a warning to the configuration check for systems behind a NAT gateway with an incorrectly configured DNS IP address.
+Added options to the Module Config page for selecting which columns appear on the List Virtual Servers page, including new ones like the reseller, email address and extra admins.
